    type to smallint (alec)
  - added accounting period: 1-daily (alec)
  - fixed bugs related to charset encoding and timeouts
    in lms-sendinvoices script (chilek)
  - BTS#0000413: fixed payments accounting on Payments List (endrju/alec)
  - lmsd/parser: updated tscript library, runtime errors handling (alec)
  - lmsd/payments: fixed subscription period calculation (alec)

version 1.7.1 Swarog <A.L.E.C's Nightmare> (2005-06-27):

  - changed upgrade scripts for 1.2 version, deleted for 1.0 (alec)
  - bugfix: ipaddr_pub support in NetworkShift() (alec)
  - lmsd/pinger: activate online status for addresses matching interfaces
    where runs daemon, speedup - dropped ORDER BY from query (alec)
  - Customer Search Results paging (alec)
  - fixed smtp_auth_type default behaviour - use best method (alec)
  - added warning about lack of PEAR::Mail in SendMail() function (alec)
  - fixed nodes searching results list - nodes with ID=0 (alec)
  - lmsd/system: added option 'sql' (alec)
  - in nodes and customers searching added workaround for postgresql's ILIKE 
    problem with national characters (alec)
  - lmsd/dns: networks can share the same domain name (alec)
  - lms-notify: added option 'mailcharset' with default setting 'UTF-8' (alec)
  - lms-notify: don't send messages to deleted customers (alec)
  - lms-notify: don't stop on unknown/wrong recipient address (alec)
  - file sample/mailtemplate.txt converted to UTF-8 (alec)
  - fixed tickets searching by requestor name (also added workaround for
    postgresql's ILIKE bug) (alec)
  - fixed _smarty_function_sum() - each row must be an array (alec)
  - better english UI messages (kondi)
  - we can add and search tickets with all customer statuses (chilek)
  - all UI colors moved to style.css (alec)
  - added workarround for page margin in Opera browsers (lukasz)
  - lms-makeiptables: added public IP (SNAT) support (alec/daro)
  - changed naming convention: user -> customer, admin -> user (alec)