@@ -27,6 +27,7 @@ aliaslist_pagelimit = 100
 configlist_pagelimit = 100
 receiptlist_pagelimit = 100
 taxratelist_pagelimit = 100
+numberplanlist_pagelimit = 100
 networkhosts_pagelimit = 256
 reload_type = "sql"
 reload_execcmd = "/bin/true"
